# harmonic-memory

./: .gitignore  config.yaml  pyproject.toml
scripts/: backfill_edges.py  bootstrap.sh  check_size.py  claude-ingest.sh  consolidate.sh  decay.sh  pre-compact.sh
src/: __init__.py  config.py  dashboard.html  server.py
src/api/: routes.py  schemas.py
src/db/: qdrant_client.py  sqlite.py
src/ingest/: __init__.py  classifier.py  dedup.py  embedder.py  extractor.py  scorer.py
src/lifecycle/: consolidate.py  decay.py
src/neural/: __init__.py
src/search/: __init__.py
src/sources/: claude_hook.py  codex_watcher.py  session_watcher.py
