[project]
name = "harmonic-memory"
version = "0.1.0"
description = "World-class AI memory system — unified, LLM-powered, real-time cognitive backbone"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "qdrant-client>=1.9.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "fastembed>=0.3.0",
    "aiofiles>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[project.scripts]
harmonic-memory = "src.server:main"
